Fix scrolling of dropdown when offscreen

--- a/app/javascript/styles/basics.scss
+++ b/app/javascript/styles/basics.scss
@@ -30,7 +30,7 @@ body {
   }
 
   &.app-body {
-    position: fixed;
+    position: absolute;
     width: 100%;
     height: 100%;
     padding: 0;
